--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <title>Snake</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="/js/app.js" charset="utf-8"></script>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
+  <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
   <div id="porthole">
