--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <header>
-  <!-- <h1 style="margin:10px;text-align:center;color:white;font-family:andale mono;font-weight:bold;font-size:90px;">⇦⇧⇨⇩</h1> -->
-  <!-- <img style="border-radius:100%;max-width:300px;" src="css/images/bgbg.gif" alt=""> -->
-  <h1 style="float:left;font-family:andale mono;color:white;font-size:60px;padding-bottom:20px;margin:20px;">  ⇦⇧⇨⇩ <br><img style="border-radius:100%;max-width:300px;" src="css/images/bgbg.gif" alt="">
+  <h1 style="float:left;font-family:andale mono;color:white;font-size:60px;padding-bottom:20px;margin:20px;"> <br><img style="border-radius:100%;max-width:300px;" src="css/images/bgbg.gif" alt="">
 </h1>
 <h1 style="float:right;font-family:andale mono;color:white;font-size:90px;padding-bottom:20px;margin-right:20px;"><br> > &#9733;
 </h1>
@@ -17,7 +15,7 @@
 <body>
   <div id="porthole">
     <div id="board"></div>
-    <h1 style="font-family:andale mono;color:white;font-size:60px;padding-bottom:20px;">
+    <h1 style="text-align:center;font-family:andale mono;color:white;font-size:60px;padding-bottom:20px;">  ⇦⇧⇨⇩</h1>
   </div>
   <span id="message">
 
